--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,25 @@
         android:orientation="vertical">
 
         <RadioGroup
+            android:id="@+id/rOpcion"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/b1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="RadioButton" />
+                android:checked="true"
+                android:text="Toast" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/b2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="RadioButton" />
+                android:text="SnackBar" />
 
         </RadioGroup>
 
